@@ -8,24 +8,26 @@
  */
 package de.rub.nds.tlsscanner.serverscanner.guideline.serialization;
 
-import de.rub.nds.scanner.core.constants.TestResults;
-import de.rub.nds.scanner.core.guideline.Guideline;
-import de.rub.nds.scanner.core.guideline.GuidelineCheck;
-import de.rub.nds.scanner.core.guideline.GuidelineCheckCondition;
-import de.rub.nds.scanner.core.guideline.GuidelineIO;
-import de.rub.nds.scanner.core.guideline.RequirementLevel;
-import de.rub.nds.tlsattacker.core.constants.*;
+import de.rub.nds.protocol.constants.HashAlgorithm;
+import de.rub.nds.protocol.constants.SignatureAlgorithm;
+import de.rub.nds.scanner.core.guideline.*;
+import de.rub.nds.scanner.core.probe.result.TestResults;
+import de.rub.nds.tlsattacker.core.constants.CipherSuite;
+import de.rub.nds.tlsattacker.core.constants.ExtensionType;
+import de.rub.nds.tlsattacker.core.constants.NamedGroup;
+import de.rub.nds.tlsattacker.core.constants.ProtocolVersion;
 import de.rub.nds.tlsattacker.util.tests.TestCategories;
 import de.rub.nds.tlsscanner.core.constants.TlsAnalyzedProperty;
+import de.rub.nds.tlsscanner.core.guideline.checks.*;
 import de.rub.nds.tlsscanner.serverscanner.guideline.checks.*;
-import de.rub.nds.tlsscanner.serverscanner.report.ServerReport;
+import de.rub.nds.x509attacker.constants.X509NamedCurve;
+import de.rub.nds.x509attacker.constants.X509Version;
 import jakarta.xml.bind.JAXBException;
 import java.io.IOException;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
@@ -34,7 +36,13 @@ public class NistGuidelineSerializationIT {
     @Test
     @Tag(TestCategories.INTEGRATION_TEST)
     public void serialize() throws JAXBException, IOException {
-        List<GuidelineCheck<ServerReport>> checks = new ArrayList<>();
+        List<GuidelineCheck> checks = new ArrayList<>();
+        checks.add(
+                new AnalyzedPropertyGuidelineCheck(
+                        "Servers should support TLS 1.3 and shall support TLS 1.3 by January 1, 2024.",
+                        RequirementLevel.MUST,
+                        TlsAnalyzedProperty.SUPPORTS_TLS_1_3,
+                        TestResults.TRUE));
         checks.add(
                 new AnalyzedPropertyGuidelineCheck(
                         "Servers shall support TLS 1.2.",
@@ -43,62 +51,62 @@ public class NistGuidelineSerializationIT {
                         TestResults.TRUE));
         checks.add(
                 new AnalyzedPropertyGuidelineCheck(
-                        "Servers should support TLS 1.3 and shall support TLS 1.3 by January 1, 2024.",
-                        RequirementLevel.SHOULD,
-                        TlsAnalyzedProperty.SUPPORTS_TLS_1_3,
-                        TestResults.TRUE));
-        checks.add(
-                new AnalyzedPropertyGuidelineCheck(
-                        "Support of TLS 1.0 is discouraged.",
-                        RequirementLevel.MAY,
-                        TlsAnalyzedProperty.SUPPORTS_TLS_1_0,
-                        TestResults.FALSE));
-        checks.add(
-                new AnalyzedPropertyGuidelineCheck(
-                        "Support of TLS 1.1 is discouraged.",
+                        "The use of TLS versions 1.1 and 1.0 is generally discouraged.",
                         RequirementLevel.MAY,
                         TlsAnalyzedProperty.SUPPORTS_TLS_1_1,
                         TestResults.FALSE));
         checks.add(
                 new AnalyzedPropertyGuidelineCheck(
-                        "Servers shall not support SSL 3.0.",
-                        RequirementLevel.MUST,
+                        "The use of TLS versions 1.1 and 1.0 is generally discouraged.",
+                        RequirementLevel.MAY,
+                        TlsAnalyzedProperty.SUPPORTS_TLS_1_0,
+                        TestResults.FALSE));
+        checks.add(
+                new AnalyzedPropertyGuidelineCheck(
+                        "These servers shall not allow the use of SSL 2.0 or SSL 3.0.",
+                        RequirementLevel.MUST_NOT,
                         TlsAnalyzedProperty.SUPPORTS_SSL_3,
                         TestResults.FALSE));
         checks.add(
                 new AnalyzedPropertyGuidelineCheck(
-                        "Servers shall not support SSL 2.0.",
-                        RequirementLevel.MUST,
+                        "These servers shall not allow the use of SSL 2.0 or SSL 3.0.",
+                        RequirementLevel.MUST_NOT,
                         TlsAnalyzedProperty.SUPPORTS_SSL_2,
                         TestResults.FALSE));
         checks.add(
                 new CertificateAgilityGuidelineCheck(
-                        "Should support the use of multiple server certificates with their associated private keys to support algorithm and key size agility",
+                        "Should support the use of multiple server certificates with their associated private keys to support algorithm and key size agility.",
                         RequirementLevel.SHOULD));
         checks.add(
-                new SignatureAlgorithmsCertificateGuidelineCheck(
-                        "Shall be configured with an RSA signature certificate or an ECDSA signature certificate",
+                new SignatureAlgorithmsTypeCertificateGuidelineCheck(
+                        "Shall be configured with an RSA signature certificate or an ECDSA signature certificate.",
                         RequirementLevel.MUST,
                         true,
-                        Arrays.asList(SignatureAlgorithm.RSA, SignatureAlgorithm.ECDSA)));
+                        Arrays.asList(
+                                SignatureAlgorithm.RSA_PKCS1,
+                                SignatureAlgorithm.RSA_SSA_PSS,
+                                SignatureAlgorithm.ECDSA)));
         checks.add(
                 new CertificateCurveGuidelineCheck(
-                        "For ECDSA: Curve P-256 or curve P-384 should be used in the public key",
+                        "For ECDSA: Curve P-256 or curve P-384 should be used in the public key.",
                         RequirementLevel.SHOULD,
-                        Arrays.asList(NamedGroup.SECP256R1, NamedGroup.SECP384R1)));
-        checks.add(
-                new AnalyzedPropertyGuidelineCheck(
-                        "Certificates shall be issued by CA that publishes revocation information in OCSP responses",
-                        RequirementLevel.MUST,
-                        TlsAnalyzedProperty.SUPPORTS_OCSP,
-                        TestResults.TRUE));
+                        Arrays.asList(X509NamedCurve.SECP256R1, X509NamedCurve.SECP384R1)));
+        // TODO: Implement serverscanner probe that sets TlsAnalyzedProperty.SUPPORTS_OCSP (see
+        // issue #199).
+        //        checks.add(
+        //                new AnalyzedPropertyGuidelineCheck(
+        //                        "Certificates shall be issued by a CA that publishes revocation
+        // information in OCSP responses.",
+        //                        RequirementLevel.MUST,
+        //                        TlsAnalyzedProperty.SUPPORTS_OCSP,
+        //                        TestResults.TRUE));
         checks.add(
                 new CertificateVersionGuidelineCheck(
-                        "Server certificate shall be an X.509 version 3 certificate",
+                        "Server certificate shall be an X.509 version 3 certificate.",
                         RequirementLevel.MUST,
-                        3));
+                        X509Version.V3));
         checks.add(
-                new KeySizeCertGuidelineCheck(
+                new ServerKeySizeGuidelineCheck(
                         "All server and client certificates shall contain public keys that offer at least 112 bits of security.",
                         RequirementLevel.MUST,
                         2048,
@@ -107,7 +115,7 @@ public class NistGuidelineSerializationIT {
                         2048));
         checks.add(
                 new CertificateSignatureCheck(
-                        "If the server supports TLS versions prior to TLS 1.2, the certificate should be signed with an algorithm consistent with the public key",
+                        "If the server supports TLS versions prior to TLS 1.2, the certificate should be signed with an algorithm consistent with the public key.",
                         RequirementLevel.SHOULD,
                         GuidelineCheckCondition.or(
                                 Arrays.asList(
@@ -120,36 +128,35 @@ public class NistGuidelineSerializationIT {
                         false));
         checks.add(
                 new CertificateValidityGuidelineCheck(
-                        "Certificate Validity Period should be 3 years or less.",
+                        "Certificate validity period should be 3 years or less.",
                         RequirementLevel.SHOULD,
                         1095));
         checks.add(
+                new ServerCertificateNameGuidelineCheck(
+                        "Issuer Distinguished Name (DN): A single value should be encoded in each Relative Distinguished Name (RDN). All attributes that are of DirectoryString type should be encoded as a PrintableString. [...] Subject Distinguished Name: A single value should be encoded in each RDN. All attributes that are of DirectoryString type should be encoded as a PrintableString. If present, the CN attribute should be of the form: CN={host IP address | host DNS name}",
+                        RequirementLevel.SHOULD,
+                        false));
+        checks.add(
                 new KeyUsageCertificateCheck(
-                        "Key Usage Extension should be used with digitalSignature and keyAgreement values.",
+                        "Key Usage extension should be used with \"digitalSignature\" and \"keyAgreement\" values.",
                         RequirementLevel.SHOULD));
         checks.add(
                 new ExtendedKeyUsageCertificateCheck(
-                        "Server should be configured to allow use of extended key usage extension with key purpose specifically for server authentication",
+                        "Servers should be configured to allow use of the Extended Key Usage extension with a key purpose specifically for server authentication.",
                         RequirementLevel.SHOULD));
         checks.add(
-                new CipherSuiteGuidelineCheck(
-                        "Only listed Cipher Suites shall be used",
+                new RecommendedCipherSuiteGuidelineCheck( // Appendix C contains a conditional
+                        // SHOULD for PSK
+                        // cipher suites. Appendix D only contains a
+                        // conditional MAY for RSA cipher suites. Thus, these
+                        // cipher suites are omitted here.
+                        "Cipher suites that do not appear in this section [3.3.1], Appendix C, or Appendix D shall not be used. Section 3.3.1:",
                         RequirementLevel.MUST,
                         Arrays.asList(
                                 ProtocolVersion.TLS10,
                                 ProtocolVersion.TLS11,
                                 ProtocolVersion.TLS12),
                         Arrays.asList(
-                                CipherSuite.TLS_RSA_WITH_AES_128_CCM,
-                                CipherSuite.TLS_RSA_WITH_AES_256_CCM,
-                                CipherSuite.TLS_RSA_WITH_AES_128_CCM_8,
-                                CipherSuite.TLS_RSA_WITH_AES_256_CCM_8,
-                                CipherSuite.TLS_RSA_WITH_AES_128_CBC_SHA,
-                                CipherSuite.TLS_RSA_WITH_AES_256_CBC_SHA,
-                                CipherSuite.TLS_RSA_WITH_AES_128_CBC_SHA256,
-                                CipherSuite.TLS_RSA_WITH_AES_256_CBC_SHA256,
-                                CipherSuite.TLS_RSA_WITH_AES_128_GCM_SHA256,
-                                CipherSuite.TLS_RSA_WITH_AES_256_GCM_SHA384,
                                 CipherSuite.TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,
                                 CipherSuite.TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,
                                 CipherSuite.TLS_ECDHE_ECDSA_WITH_AES_128_CCM,
@@ -207,10 +214,10 @@ public class NistGuidelineSerializationIT {
                                 CipherSuite.TLS_ECDH_RSA_WITH_AES_128_CBC_SHA,
                                 CipherSuite.TLS_ECDH_RSA_WITH_AES_256_CBC_SHA)));
         checks.add(
-                new CipherSuiteGuidelineCheck(
-                        "Only listed Cipher Suites shall be used for TLS 1.3",
+                new RecommendedCipherSuiteGuidelineCheck(
+                        "Cipher suites that do not appear in this section [3.3.1], Appendix C, or Appendix D shall not be used.",
                         RequirementLevel.MUST,
-                        Arrays.asList(ProtocolVersion.TLS13),
+                        List.of(ProtocolVersion.TLS13),
                         Arrays.asList(
                                 CipherSuite.TLS_AES_128_GCM_SHA256,
                                 CipherSuite.TLS_AES_256_GCM_SHA384,
@@ -219,7 +226,7 @@ public class NistGuidelineSerializationIT {
         checks.add(
                 new AnalyzedPropertyGuidelineCheck(
                         "Servers shall not be vulnerable to padding oracle.",
-                        RequirementLevel.MUST,
+                        RequirementLevel.MUST_NOT,
                         TlsAnalyzedProperty.VULNERABLE_TO_PADDING_ORACLE,
                         TestResults.FALSE));
         checks.add(
@@ -235,7 +242,7 @@ public class NistGuidelineSerializationIT {
                         HashAlgorithm.SHA224));
         checks.add(
                 new AnalyzedPropertyGuidelineCheck(
-                        "The server shall support secure renegotiation Extension.",
+                        "The server shall support Secure Renegotiation extension.",
                         RequirementLevel.MUST,
                         GuidelineCheckCondition.or(
                                 Arrays.asList(
@@ -251,13 +258,13 @@ public class NistGuidelineSerializationIT {
                         TlsAnalyzedProperty.SUPPORTS_SECURE_RENEGOTIATION_EXTENSION,
                         TestResults.TRUE));
         checks.add(
-                new ExtensionGuidelineCheck(
-                        "The server shall be able to process and respond to the server name indication extension.",
+                new RequiredExtensionGuidelineCheck(
+                        "The server shall be able to process and respond to the Server Name Indication extension.",
                         RequirementLevel.MUST,
                         ExtensionType.SERVER_NAME_INDICATION));
         checks.add(
                 new AnalyzedPropertyGuidelineCheck(
-                        "The Extended Master Secret extension shall be supported.",
+                        "Extended Master Secret extension shall be supported.",
                         RequirementLevel.MUST,
                         GuidelineCheckCondition.or(
                                 Arrays.asList(
@@ -285,10 +292,10 @@ public class NistGuidelineSerializationIT {
                                                 TlsAnalyzedProperty.SUPPORTS_TLS_1_3,
                                                 TestResults.TRUE))),
                         TlsAnalyzedProperty.IGNORES_OFFERED_SIG_HASH_ALGOS,
-                        TestResults.TRUE));
+                        TestResults.FALSE));
         checks.add(
                 new AnalyzedPropertyGuidelineCheck(
-                        "The Certificate Status Request extension shall be supported.",
+                        "Certificate Status Request extension shall be supported.",
                         RequirementLevel.MUST,
                         TlsAnalyzedProperty.SUPPORTS_CERTIFICATE_STATUS_REQUEST,
                         TestResults.TRUE));
@@ -314,8 +321,8 @@ public class NistGuidelineSerializationIT {
                         TlsAnalyzedProperty.SUPPORTS_TLS_FALLBACK_SCSV,
                         TestResults.TRUE));
         checks.add(
-                new NamedGroupsGuidelineCheck(
-                        "When elliptic curve cipher suites are configured, at least one of the NIST-approved curves, P-256 (secp256r1) and P-384 (secp384r1), shall be supported as described in RFC 8422. Additional NIST-recommended elliptic curves are listed in SP 800-56A, Appendix D. Finite field groups that are approved for TLS in SP 800-56A, Appendix D may be supported.",
+                new RequiredExtensionGuidelineCheck(
+                        "Servers that support either ephemeral ECDH cipher suites or TLS 1.3 shall support this extension.",
                         RequirementLevel.MUST,
                         GuidelineCheckCondition.or(
                                 Arrays.asList(
@@ -325,6 +332,17 @@ public class NistGuidelineSerializationIT {
                                         new GuidelineCheckCondition(
                                                 TlsAnalyzedProperty.SUPPORTS_TLS_1_3,
                                                 TestResults.TRUE))),
+                        ExtensionType.ELLIPTIC_CURVES));
+        checks.add(
+                new RequiredNamedGroupsGuidelineCheck(
+                        "When elliptic curve cipher suites are configured, at least one of the NIST-approved curves, P-256 (secp256r1) and P-384 (secp384r1), shall be supported as described in RFC 8422.",
+                        RequirementLevel.MUST,
+                        List.of(NamedGroup.SECP256R1, NamedGroup.SECP384R1),
+                        true));
+        checks.add(
+                new RecommendedNamedGroupsGuidelineCheck(
+                        "Additional NIST-recommended elliptic curves are listed in SP 800-56A, Appendix D. Finite field groups that are approved for TLS in SP 800-56A, Appendix D may be supported.",
+                        RequirementLevel.MUST,
                         Arrays.asList(
                                 NamedGroup.SECP224R1,
                                 NamedGroup.SECP256R1,
@@ -342,20 +360,17 @@ public class NistGuidelineSerializationIT {
                                 NamedGroup.FFDHE3072,
                                 NamedGroup.FFDHE4096,
                                 NamedGroup.FFDHE6144,
-                                NamedGroup.FFDHE8192),
-                        Arrays.asList(NamedGroup.SECP256R1, NamedGroup.SECP384R1),
-                        false,
-                        2));
+                                NamedGroup.FFDHE8192)));
         checks.add(
-                new ExtensionGuidelineCheck(
-                        "The Key Share extension shall be supported if the server supports TLS 1.3",
+                new RequiredExtensionGuidelineCheck(
+                        "The Key Share extension shall be supported if the server supports TLS 1.3.",
                         RequirementLevel.MUST,
                         new GuidelineCheckCondition(
                                 TlsAnalyzedProperty.SUPPORTS_TLS_1_3, TestResults.TRUE),
                         ExtensionType.KEY_SHARE));
         checks.add(
-                new ExtensionGuidelineCheck(
-                        "The EC Point Format extension shall be supported if the server supports EC cipher suites",
+                new RequiredExtensionGuidelineCheck(
+                        "The EC Point Format extension shall be supported if the server supports EC cipher suites.",
                         RequirementLevel.MUST,
                         GuidelineCheckCondition.and(
                                 Arrays.asList(
@@ -379,7 +394,7 @@ public class NistGuidelineSerializationIT {
                         ExtensionType.EC_POINT_FORMATS));
         checks.add(
                 new AnalyzedPropertyGuidelineCheck(
-                        "The Multiple Certificate Status extension should be supported if status information for the server’s certificate is available via OCSP and the extension is supported by the server implementation",
+                        "The Multiple Certificate Status extension should be supported if status information for the server's certificate is available via OCSP and the extension is supported by the server implementation.",
                         RequirementLevel.SHOULD,
                         GuidelineCheckCondition.and(
                                 Arrays.asList(
@@ -450,22 +465,24 @@ public class NistGuidelineSerializationIT {
                         TlsAnalyzedProperty.SUPPORTS_TLS13_PSK_EXCHANGE_MODES,
                         TestResults.TRUE));
         checks.add(
-                new ExtensionGuidelineCheck(
-                        "The Supported Versions extension shall be supported if the server supports TLS 1.3",
+                new RequiredExtensionGuidelineCheck(
+                        "The Supported Versions extension shall be supported if the server supports TLS 1.3.",
                         RequirementLevel.MUST,
                         new GuidelineCheckCondition(
                                 TlsAnalyzedProperty.SUPPORTS_TLS_1_3, TestResults.TRUE),
                         ExtensionType.SUPPORTED_VERSIONS));
         checks.add(
-                new ExtensionGuidelineCheck(
-                        "Servers that support TLS 1.3 may support the cookie extension",
+                new RequiredExtensionGuidelineCheck(
+                        "Servers that support TLS 1.3 may support the Cookie extension.", // Earlier
+                        // in the document it is stated that the "Cookie extension **shall** be
+                        // supported if the server supports TLS 1.3".
                         RequirementLevel.MAY,
                         new GuidelineCheckCondition(
                                 TlsAnalyzedProperty.SUPPORTS_TLS_1_3, TestResults.TRUE),
                         ExtensionType.COOKIE));
         checks.add(
                 new AnalyzedPropertyGuidelineCheck(
-                        "The Signed Certificate Timestamps extension should be supported if the server’s certificate was issued by a publicly trusted CA and the certificate does not include a Signed Certificate Timestamps List extension.",
+                        "The Signed Certificate Timestamps extension should be supported if the server's certificate was issued by a publicly trusted CA and the certificate does not include a Signed Certificate Timestamps List extension.",
                         RequirementLevel.SHOULD,
                         new GuidelineCheckCondition(
                                 TlsAnalyzedProperty.SUPPORTS_SCTS_PRECERTIFICATE,
@@ -475,10 +492,27 @@ public class NistGuidelineSerializationIT {
         checks.add(
                 new AnalyzedPropertyGuidelineCheck(
                         "Servers should not process early data received in the ClientHello message.",
-                        RequirementLevel.SHOULD,
+                        RequirementLevel.SHOULD_NOT,
                         new GuidelineCheckCondition(
                                 TlsAnalyzedProperty.SUPPORTS_TLS_1_3, TestResults.TRUE),
                         TlsAnalyzedProperty.SUPPORTS_TLS13_0_RTT,
+                        TestResults.FALSE));
+        checks.add(
+                new AnalyzedPropertyGuidelineCheck(
+                        "The Client Certificate URL extension should not be supported.",
+                        RequirementLevel.SHOULD_NOT,
+                        GuidelineCheckCondition.or(
+                                Arrays.asList(
+                                        new GuidelineCheckCondition(
+                                                TlsAnalyzedProperty.SUPPORTS_TLS_1_0,
+                                                TestResults.TRUE),
+                                        new GuidelineCheckCondition(
+                                                TlsAnalyzedProperty.SUPPORTS_TLS_1_1,
+                                                TestResults.TRUE),
+                                        new GuidelineCheckCondition(
+                                                TlsAnalyzedProperty.SUPPORTS_TLS_1_2,
+                                                TestResults.TRUE))),
+                        TlsAnalyzedProperty.SUPPORTS_CLIENT_CERTIFICATE_URL,
                         TestResults.FALSE));
         checks.add(
                 new AnalyzedPropertyGuidelineCheck(
@@ -486,8 +520,14 @@ public class NistGuidelineSerializationIT {
                         RequirementLevel.SHOULD,
                         new GuidelineCheckCondition(
                                 TlsAnalyzedProperty.SUPPORTS_TLS13_0_RTT, TestResults.TRUE),
-                        TlsAnalyzedProperty.SUPPORTS_TLS13_SESSION_TICKETS,
-                        TestResults.TRUE));
+                        TlsAnalyzedProperty.REUSABLE_TICKET,
+                        TestResults.FALSE));
+        checks.add(
+                new AnalyzedPropertyGuidelineCheck(
+                        "The Raw Public Key extension shall not be supported.",
+                        RequirementLevel.MUST_NOT,
+                        TlsAnalyzedProperty.SUPPORTS_RAW_PUBLIC_KEY_CERTIFICATES,
+                        TestResults.FALSE));
         checks.add(
                 new AnalyzedPropertyGuidelineCheck(
                         "The null compression method shall be enabled, and all other compression methods shall be disabled.",
@@ -495,18 +535,11 @@ public class NistGuidelineSerializationIT {
                         TlsAnalyzedProperty.SUPPORTS_TLS_COMPRESSION,
                         TestResults.FALSE));
 
-        Guideline<ServerReport> guideline =
-                new Guideline<>(
+        Guideline guideline =
+                new Guideline(
                         "NIST SP 800-52r2", "https://doi.org/10.6028/NIST.SP.800-52r2", checks);
-        GuidelineIO<ServerReport> guidelineIO =
-                new GuidelineIO<>(
-                        TlsAnalyzedProperty.class,
-                        checks.stream()
-                                .map(
-                                        check ->
-                                                (Class<? extends GuidelineCheck<ServerReport>>)
-                                                        check.getClass())
-                                .collect(Collectors.toSet()));
-        guidelineIO.write(Paths.get("src/main/resources/guideline/nist.xml").toFile(), guideline);
+        GuidelineIO guidelineIO = new GuidelineIO(TlsAnalyzedProperty.class);
+        guidelineIO.write(
+                Paths.get("src/main/resources/server-guidelines/nist.xml").toFile(), guideline);
     }
 }
